[package]
name = "qora-vision"
version = "0.1.0"
edition = "2021"

[features]
gpu = ["cortex/vulkan"]
gpu-metal = ["cortex/metal"]

[dependencies]
cortex = { git = "https://github.com/qora-protocol/cortex", features = ["ndarray"] }
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
